--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,12 @@
 /NetBeansProjects/gettersettermethodCircle/build/
 /NetBeansProjects/Student/nbproject/private/
 /NetBeansProjects/Student/build/
+/NetBeansProjects/SortDoubles/nbproject/private/
+/NetBeansProjects/SortDoubles/build/
+/NetBeansProjects/HairSalon/nbproject/private/
+/NetBeansProjects/HairSalon/build/
+/NetBeansProjects/JavaApplication9/nbproject/private/
+/NetBeansProjects/test/nbproject/private/
+/NetBeansProjects/BrickBreaker/nbproject/private/
+/NetBeansProjects/BrickBreaker/build/
+/NetBeansProjects/BrickBreaker/dist/
