--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,14 @@
 /NetBeansProjects/BrickBreaker/nbproject/private/
 /NetBeansProjects/BrickBreaker/build/
 /NetBeansProjects/BrickBreaker/dist/
+/NetBeansProjects/test/build/
+/NetBeansProjects/Car/nbproject/private/
+/NetBeansProjects/Car/build/
+/NetBeansProjects/Employee/nbproject/private/
+/NetBeansProjects/Employee/build/
+/NetBeansProjects/Book/nbproject/private/
+/NetBeansProjects/Book/build/
+/NetBeansProjects/HotelRoom/nbproject/private/
+/NetBeansProjects/HotelRoom/build/
+/NetBeansProjects/CoffeeShop/nbproject/private/
+/NetBeansProjects/CoffeeShop/build/
