--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,13 @@
 /NetBeansProjects/HotelRoom/build/
 /NetBeansProjects/CoffeeShop/nbproject/private/
 /NetBeansProjects/CoffeeShop/build/
+/NetBeansProjects/Square/nbproject/private/
+/NetBeansProjects/Square/build/
+/NetBeansProjects/Book_abstract/nbproject/private/
+/NetBeansProjects/Book_abstract/build/
+/NetBeansProjects/Account/nbproject/private/
+/NetBeansProjects/Account/build/
+/NetBeansProjects/Player/nbproject/private/
+/NetBeansProjects/Player/build/
+/NetBeansProjects/Turner/nbproject/private/
+/NetBeansProjects/Turner/build/
