--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@
 /NetBeansProjects/Player/build/
 /NetBeansProjects/Turner/nbproject/private/
 /NetBeansProjects/Turner/build/
+/NetBeansProjects/FilesPractice/nbproject/private/
+/NetBeansProjects/FilesPractice/build/
+/NetBeansProjects/FileStatistics/nbproject/private/
+/NetBeansProjects/FileStatistics/build/
+/NetBeansProjects/WritePhoneList/nbproject/private/
+/NetBeansProjects/WritePhoneList/build/
