--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@
 /NetBeansProjects/FileStatistics/build/
 /NetBeansProjects/WritePhoneList/nbproject/private/
 /NetBeansProjects/WritePhoneList/build/
+/NetBeansProjects/GoTooFar/nbproject/private/
+/NetBeansProjects/GoTooFar/build/
+/NetBeansProjects/NegativeArray/nbproject/private/
+/NetBeansProjects/FileInputOutputDemo/nbproject/private/
+/NetBeansProjects/FileInputOutputDemo/build/
