--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,8 @@ NetBeansProjects/FilesPractice/testtest1.txt
 /NetBeansProjects/TaxCalculator/nbproject/private/
 /NetBeansProjects/TaxCalculator/build/
 /NetBeansProjects/ DatabasePractice/nbproject/private/
+/NetBeansProjects/FirstFramePractice/dist/
+/NetBeansProjects/LoginLogout/nbproject/private/
+/NetBeansProjects/Login/nbproject/private/
+/NetBeansProjects/Login/build/
+/NetBeansProjects/Login/dist/
