--- a/NetBeansProjects/FirstFramePractice/nbproject/project.properties
+++ b/NetBeansProjects/FirstFramePractice/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -30,19 +29,21 @@ dist.jar=${dist.dir}/FirstFramePractice.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.derbyclient.jar=/Applications/NetBeans/db-derby-10.13.1.1-bin/lib/derbyclient.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.derbyclient.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -95,13 +96,14 @@ javafx.swing=true
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
 # Main class for Java launcher
-main.class=firstframepractice.FirstFramePractice
+main.class=firstframepractice.FirstFrame
 # For improved security specify narrower Codebase manifest attribute to prevent RIAs from being repurposed
 manifest.custom.codebase=*
 # Specify Permissions manifest attribute to override default (choices: sandbox, all-permissions)
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
