--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,7 @@ NetBeansProjects/FilesPractice/testtest1.txt
 /NetBeansProjects/Login/nbproject/private/
 /NetBeansProjects/Login/build/
 /NetBeansProjects/Login/dist/
+/NetBeansProjects/JavaFXApplication11/nbproject/private/
+/NetBeansProjects/JavaFXApplication11/build/
+/NetBeansProjects/videoStore/nbproject/private/
+/NetBeansProjects/videoStore/build/
