--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,5 @@ NetBeansProjects/FilesPractice/testtest1.txt
 /NetBeansProjects/ArrayList_Stack/build/
 /NetBeansProjects/Linkedlist_Queue/nbproject/private/
 /NetBeansProjects/Linkedlist_Queue/build/
+/NetBeansProjects/setCalculator/nbproject/private/
+/NetBeansProjects/setCalculator/build/
