--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,5 @@ NetBeansProjects/FilesPractice/testtest1.txt
 /NetBeansProjects/Linkedlist_Queue/build/
 /NetBeansProjects/setCalculator/nbproject/private/
 /NetBeansProjects/setCalculator/build/
+/NetBeansProjects/FinalAssignment/nbproject/private/
+/NetBeansProjects/FinalAssignment/build/
