--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,5 @@ NetBeansProjects/FilesPractice/testtest1.txt
 /NetBeansProjects/setCalculator/build/
 /NetBeansProjects/FinalAssignment/nbproject/private/
 /NetBeansProjects/FinalAssignment/build/
+/NetBeansProjects/QuickMoney/nbproject/private/
+/NetBeansProjects/QuickMoney/build/
